<resources>
    <string name="app_name">Best Trip</string>
    <!--for login face-->
    <string name="facebook_app_id">232397197374313</string>
    <string name="fb_login_protocol_scheme">fb232397197374313</string>

    <!--sign up and sign in string-->
    <string name="password_login">Password</string>
    <string name="email_login">Email address</string>
    <string name="login_with_email">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="sign_up_with_email">Sign up</string>

    <!--navigation bar-->
    <string name="home">Home</string>
    <string name="taxi">Taxi Fare &amp; Charges</string>
    <string name="out">Log out</string>
    <string name="title_activity_log_screen">LogScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="best_trip">Best Trip</string>
    <string name="best_trip_with_us">Best trip with us</string>
    <string name="slogan">Cuộc đời là những chuyến đi chuyến đi thì có Best Trip đồng hành</string>
    <string name="title_activity_map">Results-Map</string>



    <string name="text_reset">Enter your email address to reset password</string>
    <string name="email_address">Email address</string>
    <string name="send">Send</string>
    <string name="mai_linh">Mai Linh</string>
    <string name="phone_mailinh">0888888</string>

    <!--google map-->
    <string name="google_maps_key">AIzaSyBdsE3_CUMeIiWB2gxKQpjL2fpM6lo0gPs</string>
    <string name="free_breakdown">Free Breakdown</string>
    <!--Detail Taxi-->
    <string name="location">Location</string>
    <string name="destination">Destination</string>
    <string name="open_door">Open door</string>
    <string name="near">First 30km</string>
    <string name="far">Over 30km</string>
    <string name="fee_open_door">/500m</string>
    <string name="fee_first">/1km</string>
    <string name="fee_over">/1km</string>
    <string name="about">About</string>
    <string name="trip_info">Trip info</string>
    <string name="distance">Distance</string>
    <string name="xnxx">xnxx</string>
    <string name="time">Time</string>
    <string name="describe_taxi">Describe Taxi</string>
    <string name="log_in_with_facebook">Log In with FaceBook</string>
    <string name="map">map</string>

    <!--avatar-->
    <string name="from_camera">From camera</string>
    <string name="from_gallery">From Gallery</string>

    <!--search taxi list-->
    <string name="edt_search">Search..</string>
    <string name="no_matches">No Matches</string>
    <string name="fee_openDoor">11.000</string>

    <!--taxi detail-->
    <string name="_4_seaters">4 seat</string>
    <string name="view_all">View all</string>
    <string name="currency">VND</string>
    <string name="price_taxi">price 156846</string>
    <string name="_7_seat">7 seats</string>
    <string name="brand_comp">VinaSun</string>
    <string name="_4_seats">/4 seats</string>
    <string name="_7_seats">/7 seats</string>
    <string name="fee_7seats">vlxx</string>
    <string name="fee_breakdown">Fee Breakdown</string>
    <string name="your_place">Your place</string>

</resources>
