<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp.SignUpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_man"
            android:hint="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/email"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_mail"
            android:hint="@string/email_login"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="60dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/password_login"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp" />

        <com.facebook.login.widget.LoginButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/facebook"
            app:layout_constraintEnd_toEndOf="@+id/facebook"
            app:layout_constraintStart_toStartOf="@+id/facebook"
            app:layout_constraintTop_toTopOf="@+id/facebook" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sign_up_with_email"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/facebook"
            app:layout_constraintTop_toBottomOf="@+id/password"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>