<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forget_frag">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:text="@string/text_reset"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="@+id/forgot_password"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="16dp"
            android:hint="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@color/colorAqua"
            app:layout_constraintTop_toBottomOf="@+id/text_reset" />

        <Button
            android:id="@+id/send_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/send"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password"
            app:layout_constraintStart_toStartOf="@+id/forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <ProgressBar
            android:id="@+id/progress_forget"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:visibility="gone"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13999999" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>